<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reply_blue_600"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/incomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income_btn"
            android:textColor="@color/reply_blue_800" />

        <Button
            android:id="@+id/balanceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balance_btn"
            android:textColor="@color/reply_blue_800" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_btn"
            android:textColor="@color/reply_blue_800" />

        <Button
            android:id="@+id/shareDataBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_btn"
            android:textColor="@color/reply_blue_800" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>